# CODING-AGENT

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
agent/: __init__.py  config.py  models.py  orchestrator.py
agent/execution/: __init__.py  code_generator.py  mcp_client.py  script_runner.py
agent/llm/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
agent/planning/: __init__.py  context_manager.py  semantic_search.py  shell_search.py  subagent.py
agent/tools/: __init__.py  embeddings.py  file_ops.py
agent/verification/: __init__.py  llm_judge.py  test_runner.py  visual_verifier.py
cli/: __init__.py  main.py
mcp-servers/filesystem/: __init__.py  server.py
mcp-servers/playwright/: __init__.py  server.py
tests/: __init__.py
tests/integration/: test_orchestrator.py
tests/unit/: test_config.py  test_llm_providers.py  test_models.py
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: agentClient.ts  extension.ts
